# tmux-thumbs

./: AGENTS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  Cargo.toml  README.md  tmux-thumbs-install.sh  tmux-thumbs.sh  tmux-thumbs.tmux
docs/: architecture.md  verification.md
src/: alphabets.rs  colors.rs  lib.rs  main.rs  picker.rs  state.rs  swapper.rs  tmux.rs  tmux_options.rs  tmux_script.rs  tmux_selection.rs  view.rs
