[package]
name = "thumbs"
version = "0.9.0"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "A lightning fast version copy/pasting like vimium/vimperator"
repository = "https://github.com/fcsonline/tmux-thumbs"
keywords = ["rust", "tmux", "tmux-plugin", "vimium", "vimperator"]
license = "MIT"

[dependencies]
termion = "4.0.6"
regex = "1.12.4"
clap = "4.6.1"
base64 = "0.22.1"
unicode-width = "0.2.2"

[[bin]]
name = "thumbs"
path = "src/main.rs"

[[bin]]
name = "tmux-thumbs"
path = "src/swapper.rs"
